--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         async function initializeGapiClient() {
             await gapi.client.init({
-                apiKey: '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',
+                apiKey: '',
                 discoveryDocs: [DISCOVERY_DOC],
             });
             gapiInited = true;
