--- a/index.html
+++ b/index.html
@@ -5311,7 +5311,8 @@
                 }
                 
                 // Remaining in Mizuho
-                const remainingInMizuho = totalSavings - totalAllocated;
+                //const remainingInMizuho = totalSavings - totalAllocated;
+                const remainingInMizuho = totalSavings ;
                 html += '<div style="margin-top:20px;">';
                 html += '<h4 style="color:#667eea;margin-bottom:10px;">💵 Kept in Mizuho Account</h4>';
                 html += '<div style="background:white;border-radius:8px;padding:15px;">';
