--- a/index.html
+++ b/index.html
@@ -4847,6 +4847,11 @@
                 
                 // Total income from Mizuho
                 const income = d.mizuho.salary || 0;
+
+                 // Add additional income
+                 if (d.mizuho.additionalIncome) {
+                    d.mizuho.additionalIncome.forEach(inc => income += inc.amount);
+                }
                 
                 // Total expenses from Mizuho
                 let totalExpenses = 0;
