--- a/index.html
+++ b/index.html
@@ -4846,7 +4846,7 @@
                 if (!d || !d.mizuho) return 0;
                 
                 // Total income from Mizuho
-                const income = d.mizuho.salary || 0;
+                let income = d.mizuho.salary || 0;
 
                  // Add additional income
                  if (d.mizuho.additionalIncome) {
