--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
-        <title>Advanced Financial Dashboard</title>
+        <title>Advanced Financial Dashboard.</title>
         
         <!-- ADD THESE GOOGLE DRIVE SCRIPTS -->
         <script src="https://accounts.google.com/gsi/client" async defer onload="gisLoaded()"></script>
@@ -1196,7 +1196,7 @@
                 <option value="overview">📊 All Accounts Overview</option>
                 <option value="monthly-savings">💰 Monthly Savings Report</option>
                 <option value="annual-savings">📈 Annual Savings Report</option>
-                <option value="expense-analysis">📉 Expense Analysis & Insights</option>
+                <option value="expense-analysis">📉 Expense Analysis & Insights.</option>
                 <option value="total-expense-overview">💸 Total Expense Overview</option>
             </select>
             <label>📅 Month:</label>
