--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>💰 Advanced Financial Dashboard</h1>
+        <h1>💰 Advanced Financial Dashboard.</h1>
         <p class="subtitle">Complete Multi-Account Management with Transfer History</p>
         <p style="text-align:center;font-size:11px;color:#7f8c8d;margin:-5px 0 10px 0;">
             🌩️ <strong>Drive-First Mode:</strong> All data syncs to Google Drive instantly
