--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
-        <title>Advanced Financial Dashboard.</title>
+        <title>Advanced Financial Dashboard</title>
         
         <!-- ADD THESE GOOGLE DRIVE SCRIPTS -->
         <script src="https://accounts.google.com/gsi/client" async defer onload="gisLoaded()"></script>
@@ -1174,7 +1174,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>💰 Advanced Financial Dashboard.</h1>
+        <h1>💰 Advanced Financial Dashboard</h1>
         <p class="subtitle">Complete Multi-Account Management with Transfer History</p>
         <p style="text-align:center;font-size:11px;color:#7f8c8d;margin:-5px 0 10px 0;">
             🌩️ <strong>Drive-First Mode:</strong> All data syncs to Google Drive instantly
@@ -1196,7 +1196,7 @@
                 <option value="overview">📊 All Accounts Overview</option>
                 <option value="monthly-savings">💰 Monthly Savings Report</option>
                 <option value="annual-savings">📈 Annual Savings Report</option>
-                <option value="expense-analysis">📉 Expense Analysis & Insights.</option>
+                <option value="expense-analysis">📉 Expense Analysis & Insights</option>
                 <option value="total-expense-overview">💸 Total Expense Overview</option>
             </select>
             <label>📅 Month:</label>
@@ -2080,6 +2080,11 @@
                 annualSavingsOpt.value = 'annual-savings';
                 annualSavingsOpt.textContent = '📈 Annual Savings Report';
                 sel.appendChild(annualSavingsOpt);
+
+                const totalExpenseOpt = document.createElement('option');
+                totalExpenseOpt.value = 'total-expense-overview';
+                totalExpenseOpt.textContent = '💸 Total Expense Overview';
+                sel.appendChild(totalExpenseOpt);
                 
                 const expenseAnalysisOpt = document.createElement('option');
                 expenseAnalysisOpt.value = 'expense-analysis';
