Update index.html-new fund yucho

--- a/index.html
+++ b/index.html
@@ -1495,14 +1495,14 @@
                         },
                         yucho: {
                             funds: [
-                                { name: 'Old JP Balance', balance: 363649 },
-                                { name: 'Housing', balance: 80000 },
-                                { name: 'Wedding Fund', balance: 60000 },
-                                { name: 'Wedding Wappa', balance: 37500 },
-                                { name: 'Extra Pay', balance: 20632 },
-                                { name: 'For Luqman', balance: 80000 },
-                                { name: 'Bonus', balance: 0 },
-                                { name: 'Interest', balance: 503 }
+                            { id: 1, name: 'Old JP Balance', balance: 363649 },
+                    { id: 2, name: 'Housing', balance: 80000 },
+                    { id: 3, name: 'Wedding Fund', balance: 60000 },
+                    { id: 4, name: 'Wedding Wappa', balance: 37500 },
+                    { id: 5, name: 'Extra Pay', balance: 20632 },
+                    { id: 6, name: 'For Luqman', balance: 80000 },
+                    { id: 7, name: 'Bonus', balance: 0 },
+                    { id: 8, name: 'Interest', balance: 503 }
                             ],
                             expenses: [],
                             additions: [],
