Update index.html-debugger for catg

--- a/index.html
+++ b/index.html
@@ -3998,7 +3998,7 @@
                     name: name,
                     balance: balance || 0
                 });
-                
+                debugger;
                 this.render();
                 this.msg('✅ New fund added: ' + name + ' (¥' + this.fmt(balance || 0) + ')');
                 this.saveData();
