--- a/index.html
+++ b/index.html
@@ -1912,7 +1912,16 @@
                 }
 
                 const income = d.mizuho.salary || 0;
-                const expenseRatio = income > 0 ? (totalExpenses / income) * 100 : 0;
+                               // const income = (d.mizuho.salary || 0);
+                               let additionalIncome = 0;
+                    if (d.mizuho.additionalIncome) {
+                        d.mizuho.additionalIncome.forEach(inc => additionalIncome += inc.amount);
+                    }
+                    const totalIncome = income + additionalIncome;
+
+                const expenseRatio = income > 0 ? (totalExpenses / totalIncome) * 100 : 0;
+
+                //const expenseRatio = income > 0 ? (totalExpenses / income) * 100 : 0;
 
                 document.getElementById('expenseRatio').textContent = '(' + Math.round(expenseRatio) + '%)';
                 // Calculate annual savings
